# Triangle-segment-type

./: .gitignore  CMakeLists.txt  main.cpp
include/: geometry.hpp
lib/googletest/googletest/: CMakeLists.txt
lib/googletest/googletest/cmake/: internal_utils.cmake
src/: geometry.cpp
test/: text.cpp
